# RL_2048

./: .gitignore  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: README.md
.github/workflows/: ci.yml
scripts/: demo.py  evaluate.py  play_cli.py  play_visual.py  train.py
src/: __init__.py
src/agents/: __init__.py  feature_q.py  markov_q.py  replay_buffer.py
src/game/: __init__.py  game_2048.py
src/ui/: __init__.py  pygame_ui.py
src/utils/: __init__.py  checkpoint.py  logger.py
tests/: __init__.py  test_checkpoint.py  test_feature_q.py  test_game.py  test_markov_q.py  test_replay_buffer.py
